# asteroids

./: CMakeLists.txt  main.cpp
engine/: CMakeLists.txt  dummy.cpp
engine/common/: vec2.h
engine/entities/: CMakeLists.txt  asteroid.cpp  asteroid.h
engine/physics/: CMakeLists.txt  colliders.h  dummy.cpp  physical_obj.h
engine/rendering/: CMakeLists.txt  renderable.h  renderer.cpp  renderer.h  rendering_system.cpp  rendering_system.h
